--- a/dynalibs/build.gradle
+++ b/dynalibs/build.gradle
@@ -43,4 +43,6 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     compile 'com.squareup.duktape:duktape-android:1.3.0'
     implementation 'com.github.duanhong169:drawabletoolbox:1.0.7'
+
+    implementation 'lt.neworld:spanner:1.1.0'
 }
