--- a/dynalibs/build.gradle
+++ b/dynalibs/build.gradle
@@ -41,8 +41,11 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-    compile 'com.squareup.duktape:duktape-android:1.3.0'
+    implementation 'com.squareup.duktape:duktape-android:1.3.0'
     implementation 'com.github.duanhong169:drawabletoolbox:1.0.7'
 
     implementation 'lt.neworld:spanner:1.1.0'
+    implementation 'com.airbnb.android:lottie:3.7.0'
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
 }
