--- a/dynalibs/build.gradle
+++ b/dynalibs/build.gradle
@@ -49,4 +49,5 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
     implementation 'com.google.android.exoplayer:exoplayer:2.13.3'
+    implementation 'com.github.ShrinathRaje:Preffy:2.0.0'
 }
